syntax = "proto3";
import "google/protobuf/empty.proto";

package chatServicePackage;

service ChatService {
    rpc ChatInitateRequest(InitateRequest) returns (InitateResponse) {};
    rpc SendMessage(MessageRequest) returns (google.protobuf.Empty) {};
    rpc UserStream(StreamRequest) returns (stream UserStreamResponse) {};
    rpc ChatStream(StreamRequest) returns (stream StreamMessage) {};
}

message InitateRequest {
    string name = 1;
    string avatar_url = 2;
}


message InitateResponse {
    int32 id = 1;
}

message MessageRequest {
    int32 id = 1;
    string message = 2;

}

message StreamRequest {
    int32 id = 1;
}

enum Status {
    Unkown = 0;
    Online = 1;
    Offline = 2;
}

message User {
    int32 id = 1;
    string name = 2;
    string status = 3;
    string avatar_url = 4;
}

message UserStreamResponse {
    repeated User user = 1;
}

message StreamMessage {
    int32 id = 1;
    string message = 2;
}